# personalization

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-release.yml
crates/graze-api/: .env.example  Cargo.toml
crates/graze-api/src/: config.rs  error.rs  impression_queue.rs  interaction_queue.rs  lib.rs  main.rs  metrics.rs
crates/graze-api/src/algorithm/: author_affinity.rs  coliker.rs  diversity.rs  features.rs  feed_cache.rs  liker_cache.rs  mod.rs  params.rs  proof.rs  scorer.rs  scoring_core.rs  thompson.rs
crates/graze-api/src/api/: admin.rs  auth.rs  cursor.rs  docs.rs  fallback.rs  feed.rs  health.rs  mod.rs  personalize.rs  request_id.rs  special_posts.rs
crates/graze-api/src/audit/: mod.rs
crates/graze-api/src/ml/: mod.rs
crates/graze-candidate-sync/: .env.example  Cargo.toml
crates/graze-candidate-sync/src/: config.rs  lib.rs  main.rs  metrics.rs  sync.rs
crates/graze-common/: Cargo.toml
crates/graze-common/src/: error.rs  lib.rs  metrics_server.rs
crates/graze-common/src/clickhouse/: admin_only_source.rs  config.rs  http_source.rs  impression_writer.rs  mod.rs  reader.rs  traits.rs  writer.rs
crates/graze-common/src/models/: atproto.rs  feed_context.rs  feed_success_config.rs  feed_thompson_config.rs  interaction_rows.rs  mod.rs  requests.rs  responses.rs  thompson_search_space.rs
crates/graze-common/src/redis/: client.rs  config.rs  hash.rs  keys.rs  mod.rs  scripts.rs
crates/graze-common/src/services/: interactions.rs  mod.rs  special_posts.rs  uri_interner.rs
crates/graze-frontdoor/: .env.example  Cargo.toml
crates/graze-frontdoor/src/: main.rs
crates/graze-like-streamer/: .env.example  Cargo.toml
crates/graze-like-streamer/src/: bot_filter.rs  cleanup.rs  config.rs  lib.rs  main.rs  metrics.rs  streamer.rs
docs/: ADMIN_API.md  ARCHITECTURE.md  CONFIGURATION.md  FEED_LIFECYCLE.md  PRD_RESPONSE_FEED_LIFECYCLE_HTTP.md
kube/: api-deployment.yaml  candidate-sync-deployment.yaml  configmap.yaml  hpa.yaml  like-streamer-deployment.yaml  service.yaml
lua/: graze_compute.lua  graze_compute_inverted.lua
tests/: integration_redis.rs
tests/common/: mod.rs  redis_setup.rs
tests/helpers/: mod.rs
training/: requirements.txt  train.py
