[package]
name = "graze-api"
version = "0.2.0"
edition = "2021"
description = "Graze API server for personalized feed ranking"
license = "MIT"

[[bin]]
name = "graze-api"
path = "src/main.rs"

[lib]
name = "graze_api"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
graze-common = { path = "../graze-common" }

# Redis (for error types)
deadpool-redis = { version = "0.22", features = ["connection-manager", "script", "tokio-comp", "tokio-rustls-comp"] }

# Async runtime
tokio = { version = "1.43", features = ["full", "signal"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics
prometheus-client = "0.22"

# Utilities
lru = "0.12"
base64 = "0.22"
flate2 = "1.0"
miniz_oxide = "0.8"
dashmap = "6.1"
bloomfilter = "1.0"
rand = "0.8"
rayon = "1.10"
uuid = { version = "1.10", features = ["v4", "v7"] }
rustc-hash = "2.0"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# JWT parsing
jsonwebtoken = "9.3"

# URL parsing
url = "2.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# AT Protocol
atproto-record = { version = "0.13", default-features = false }

# ML Ranking — ONNX Runtime for LightGBM inference.
# download-binaries: fetches ORT shared library at build time (convenient for dev).
# For production Docker builds set ORT_LIB_LOCATION or bundle the .so manually.
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.17"

[dev-dependencies]
async-trait = "0.1"
