[package]
name = "graze-candidate-sync"
version = "0.2.0"
edition = "2021"
description = "Graze ClickHouse to Redis candidate synchronization"
license = "MIT"

[[bin]]
name = "graze-candidate-sync"
path = "src/main.rs"

[lib]
name = "graze_candidate_sync"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
graze-common = { path = "../graze-common" }

# Async runtime
tokio = { version = "1.43", features = ["full", "signal"] }

# HTTP client (for ClickHouse)
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }

# Redis
deadpool-redis = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
rayon = "1.10"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# AT Protocol
atproto-record = { version = "0.13", default-features = false }

# Metrics
prometheus-client = "0.22"
